@@ -16,62 +16,58 @@ import java.util.List;
 
 @Configuration
 public class SecurityConfig {
-    // Reference to our custom JWT filter
+
     private final JwtFilter jwtFilter;
+
     public SecurityConfig(JwtFilter jwtFilter) {
         this.jwtFilter = jwtFilter;
     }
-
-    /**
-     * Bean for password encoding using BCrypt
-     * BCrypt is secure and recommended for hashing passwords
-     */
 
     @Bean
     public BCryptPasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
-    /**
-     * Defines the main security filter chain
-     * Controls which endpoints are public and which require authentication
-     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http
-                .csrf((csrf -> csrf.disable()))
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Enable CORS
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Allow H2 console to be displayed in a frame
-                .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()))
+                // ❌ REMOVE H2 for production
+                // .headers(headers -> headers.frameOptions(frame -> frame.sameOrigin()))
 
-                // Define access rules for endpoints
                 .authorizeHttpRequests(auth -> auth
-                        // Allow public access to login and register endpoints
-                        .requestMatchers("/h2-console/**").permitAll() // Allow H2 console
-                        .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
-                        // All other endpoints require authentication
+                        .requestMatchers(
+                                "/api/auth/login",
+                                "/api/auth/register",
+                                "/actuator/health",   // For Render health checks
+                                "/error"
+                        ).permitAll()
+
+                        // Allow CORS preflight
+                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+
                         .anyRequest().authenticated()
                 )
 
-                // Configure session management
-                // STATELESS because JWT tokens are stateless (no server-side session)
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                // Add our custom JWT filter BEFORE Spring's default authentication filter
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
-        // Build and return the filter chain
         return http.build();
     }
 
-    // CORRECT CORS CONFIGURATION
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*")); // Allow all origins
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
+
+        configuration.setAllowedOrigins(List.of(
+                "https://bharatpulse.netlify.app" // If using Netlify
+        ));
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
@@ -79,5 +75,4 @@ public class SecurityConfig {
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
 }
